change background color of global to prevent overflow color mismatch at bottom margin

--- a/ramvisor_frontend/src/styles/global.css
+++ b/ramvisor_frontend/src/styles/global.css
@@ -18,7 +18,7 @@ background-color: #f08080;
 }
 
 body {
-  background-color: var(--background-color);
+  background-color: #f5f5f5;
   color: var(--text-color);
 }
 
@@ -28,6 +28,6 @@ body {
 }
 
 [data-theme="light"] {
-  --background-color: #ffffff;
+  --background-color: #f5f5f5;
   --text-color: #000000;
 }
